[tool.poetry]
name = "langgraph-prototyping"
version = "0.1.0"
description = ""
authors = ["Tim Child <timjchild@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph-cli = "^0.1.52"
langgraph-sdk = "^0.1.30"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
